<?xml version="1.0"?>
<package format="3">
  <name>command_server_pkg</name>
  <version>0.0.0</version>
  <description>Command server with custom ComputeCommand service</description>

  <maintainer email="abdullahemirkirecci@example.com">Abdullah Emir Kireçci</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>

  <!-- Çalışma zamanı bağımlılıkları -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Bu paket rosidl arayüz paketi grubunda -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

