<package format="3">
  <name>my_project</name>
  <version>0.0.0</version>
  <description>Launch package for my project</description>

  <maintainer email="aemirkirecci@gmail.com">Abdullah Emir Kireçci</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

