<?xml version="1.0"?>
<package format="3">
  <name>sensor_publisher_pkg</name>
  <version>0.0.1</version>
  <description>Fake sensor value publisher package</description>

  <maintainer email="aemirkirecci@gmail.com">AbdullahEMirKirecci</maintainer>
  <license>Me.AEK</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

